name:                face
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2014 (c) Joseph Abrahamson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Web.Face
  build-depends:
      base >=4.7 && <4.8
    , blaze-html
    , blaze-markup
    , containers
    , mtl
    , reactive-banana
    , text
    , time
    , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010


executable test
  main-is: Test.hs
  default-language:    Haskell2010

  if impl(ghcjs)
    build-depends:
        base >=4.7 && <4.8
      , face
      , ghcjs-base
      , ghcjs-prim
      , reactive-banana
      , text
      , time
      , blaze-html
    buildable: True
  else
    buildable: False